Se modifico funcion eliminar producto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="home">
         <img class="logo" src="images/logo.png" alt="Logo" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
-        <h1 id="principal" class="principal">House of Shooter</h1>
+        <h1 id="principal" class="principal">House of Shooters</h1>
     </header>
     <main>
         <!-- Contenedor de las dos primeras cards centradas -->
