--- a/index.html
+++ b/index.html
@@ -12,63 +12,49 @@
         <img class="logo" src="images/logo.png" alt="Logo" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
         <h1 id="principal" class="principal">House of Shooters</h1>
     </header>
+    
     <main>
-        <!-- Contenedor de las dos primeras cards centradas -->
-        <div class="card-container">
-            <div class="card" data-id="1" data-name="Battlefield 2042" data-price="">
-                <img src="images/battlefield2042.webp" class="card-img-top" alt="Battlefield 2042">
+        <!-- Contenedor de productos -->
+        <div id="product-container" class="card-container">
+            <div class="card">
+                <img src="images/battlefield2042.webp" alt="Battlefield 2042">
                 <div class="card-body">
                     <h5 class="card-title">Battlefield 2042</h5>
-                    <p class="card-text">Battlefield 2042 marca el regreso a la emblemática guerra total de la franquicia...</p>
-                    <button class="btn btn-primary add-to-cart">Agregar al carrito</button>
-                    <p class="price"></p>
                 </div>
             </div>
-
-            <div class="card" data-id="2" data-name="Black Ops 6" data-price="">
-                <img src="images/blackOps6.jpg" class="card-img-top" alt="Black ops 6">
+            <div class="card">
+                <img src="images/blackOps6.jpg" alt="Black ops 6">
                 <div class="card-body">
-                    <h5 class="card-title">Black Ops 6</h5>
-                    <p class="card-text">Desarrollado por Treyarch y Raven, Black Ops 6 es un thriller de acción y espionaje...</p>
-                    <button class="btn btn-primary add-to-cart">Agregar al carrito</button>
-                    <p class="price"></p>
+                    <h5 class="card-title">Black ops 6</h5>
                 </div>
             </div>
-        </div>
-
-        <!-- Contenedor de las dos cards abajo centradas una al lado de la otra -->
-        <div class="card-container bottom">
-            <div class="card" data-id="3" data-name="Counter Strike 2">
-                <img src="images/counterStrike2.jfif" class="card-img-top" alt="counterStrike2" data-price="">
+            <div class="card">
+                <img src="images/redDeadRedemption2.jpg" alt="Red Dead Redemption 2">
+                <div class="card-body">
+                    <h5 class="card-title">Red Dead Redemption 2</h5>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/counterStrike2.jfif" alt="Counter Strike 2">
                 <div class="card-body">
                     <h5 class="card-title">Counter Strike 2</h5>
-                    <p class="card-text">Counter-Strike 2 es un videojuego de disparos táctico en primera persona...</p>
-                    <button class="btn btn-primary add-to-cart">Agregar al carrito</button>
-                    <p class="price"></p>
-                </div>
-            </div>
-
-            <div class="card" data-id="4" data-name="Red Dead Redemption">
-                <img src="images/redDeadRedemption1.jpg" class="card-img-top red-dead" alt="Red Dead Redemption" data-price="">
-                <div class="card-body">
-                    <h5 class="card-title">Red Dead Redemption</h5>
-                    <p class="card-text">Red Dead Redemption: en 1911, agentes del gobierno secuestran a la esposa y al hijo de John Marston...</p>
-                    <button class="btn btn-primary add-to-cart">Agregar al carrito</button>
-                    <p class="price"></p>
                 </div>
             </div>
         </div>
-        
+
+        <!-- Contenedor del carrito -->
         <div id="cart" class="mt-4">
             <h3>Carrito de compras</h3>
             <ul id="cart-items"></ul>
             <div>Total: $<span id="total-price">0.00</span></div>
-            <button id="checkout" class="btn btn-success mt-2">Confirmar compra</button>
+            <button id="checkout-btn" class="btn btn-success mt-2">Confirmar compra</button>
         </div>
     </main>
+
     <footer>
         <a href="#home" class="btn btn-primary">Volver al inicio</a>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
