--- a/index.html
+++ b/index.html
@@ -20,24 +20,32 @@
                 <img src="images/battlefield2042.webp" alt="Battlefield 2042">
                 <div class="card-body">
                     <h5 class="card-title">Battlefield 2042</h5>
+                    <p class="card-text">Battlefield 2042 marca el regreso a la emblemática guerra total de la franquicia...</p>
+                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card">
                 <img src="images/blackOps6.jpg" alt="Black ops 6">
                 <div class="card-body">
                     <h5 class="card-title">Black ops 6</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card">
                 <img src="images/redDeadRedemption2.jpg" alt="Red Dead Redemption 2">
                 <div class="card-body">
                     <h5 class="card-title">Red Dead Redemption 2</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card">
                 <img src="images/counterStrike2.jfif" alt="Counter Strike 2">
                 <div class="card-body">
                     <h5 class="card-title">Counter Strike 2</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
                 </div>
             </div>
         </div>
