--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
         <!-- Contenedor de las dos cards abajo centradas una al lado de la otra -->
         <div class="card-container bottom">
-
-            </div>
-
-                </div>
-            </div>
+           
         </div>
         
         <div id="cart" class="mt-4">
@@ -33,12 +29,39 @@
             <div>Total: $<span id="total-price">0.00</span></div>
             <button id="checkout" class="btn btn-success mt-2">Confirmar compra</button>
         </div>
-   
+
+        <!-- Formulario para ingresar los datos del comprador -->
+<div id="checkout-form-container" class="mt-4" style="display: none;">
+    <h3>Ingrese sus datos para completar la compra</h3>
+    <form id="checkout-form">
+        <div class="mb-3">
+            <label for="buyer-name" class="form-label">Nombre completo</label>
+            <input type="text" class="form-control" id="buyer-name" required>
+        </div>
+        <div class="mb-3">
+            <label for="buyer-address" class="form-label">Dirección de envío</label>
+            <input type="text" class="form-control" id="buyer-address" required>
+        </div>
+        <div class="mb-3">
+            <label for="buyer-email" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="buyer-email" required>
+        </div>
+        <div class="mb-3">
+            <label for="buyer-card" class="form-label">Número de tarjeta de crédito</label>
+            <input type="text" class="form-control" id="buyer-card" required placeholder="1234 5678 9101 1121">
+        </div>
+        <button type="submit" class="btn btn-success">Confirmar compra</button>
+        <button type="button" class="btn btn-secondary mt-2" id="cancel-purchase">Cancelar</button>
+    </form>
+</div>
+
+
     </main>
     <footer>
         <a href="#home" class="btn btn-primary">Volver al inicio</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
