Se modificaron botones confirmar compra y se agrego imagen de carrito

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         
         <div id="cart" class="mt-4">
+            <img  class="carritoCompras" src="images/carritoCompras.png" alt="Carrito">
             <h3>Carrito de compras</h3>
             <ul id="cart-items"></ul>
             <div>Total: $<span id="total-price">0.00</span></div>
